--- a/gdl2/MoCA_guideline.v1.test.yml
+++ b/gdl2/MoCA_guideline.v1.test.yml
@@ -26,7 +26,7 @@ test_cases:
   expected_output:
     1:
       gt0023|Total score: 26
-      gt0028|Diagnosis: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
+      gt0028|Interpretation: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
 - id: score 26 Not both trials
   input:
     1:
@@ -52,7 +52,7 @@ test_cases:
   expected_output:
     1:
       gt0023|Total score: 26
-      gt0028|Diagnosis: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
+      gt0028|Interpretation: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
 - id: score 0
   input:
     1:
@@ -78,7 +78,7 @@ test_cases:
   expected_output:
     1:
       gt0023|Total score: 0
-      gt0028|Diagnosis: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
+      gt0028|Interpretation: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
 - id: score 31
   input:
     1:
@@ -104,7 +104,7 @@ test_cases:
   expected_output:
     1:
       gt0023|Total score: 31
-      gt0028|Diagnosis: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
+      gt0028|Interpretation: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
 - id: score 29
   input:
     1:
@@ -125,13 +125,12 @@ test_cases:
       gt0017|Ask patient to name maximum number of words in 1 minute that begin with the letter F: 1|local::at0059|Named ≥11 words|
       gt0018|Ask patient similarity between train and bicycle (e.g. both are modes of transportation): 1|local::at0063|Answered correctly|
       gt0019|Ask patient similarity between watch and ruler (e.g. both are measuring tools): 1|local::at0066|Answered correctly|
-      ? gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red)
-      : 4|local::at0073|Recalled 4 words|
+      gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red): 4|local::at0073|Recalled 4 words|
       gt0021|Ask patient the date, month, year, day, place, and city: 5|local::at0082|5 correct|
   expected_output:
     1:
       gt0023|Total score: 29
-      gt0028|Diagnosis: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
+      gt0028|Interpretation: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
 - id: score 27
   input:
     1:
@@ -152,13 +151,12 @@ test_cases:
       gt0017|Ask patient to name maximum number of words in 1 minute that begin with the letter F: 1|local::at0059|Named ≥11 words|
       gt0018|Ask patient similarity between train and bicycle (e.g. both are modes of transportation): 1|local::at0063|Answered correctly|
       gt0019|Ask patient similarity between watch and ruler (e.g. both are measuring tools): 1|local::at0066|Answered correctly|
-      ? gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red)
-      : 3|local::at0072|Recalled 3 words|
+      gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red): 3|local::at0072|Recalled 3 words|
       gt0021|Ask patient the date, month, year, day, place, and city: 4|local::at0081|4 correct|
   expected_output:
     1:
       gt0023|Total score: 27
-      gt0028|Diagnosis: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
+      gt0028|Interpretation: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
 - id: score 24
   input:
     1:
@@ -179,13 +177,12 @@ test_cases:
       gt0017|Ask patient to name maximum number of words in 1 minute that begin with the letter F: 1|local::at0059|Named ≥11 words|
       gt0018|Ask patient similarity between train and bicycle (e.g. both are modes of transportation): 1|local::at0063|Answered correctly|
       gt0019|Ask patient similarity between watch and ruler (e.g. both are measuring tools): 1|local::at0066|Answered correctly|
-      ? gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red)
-      : 2|local::at0071|Recalled 2 words|
+      gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red): 2|local::at0071|Recalled 2 words|
       gt0021|Ask patient the date, month, year, day, place, and city: 3|local::at0080|3 correct|
   expected_output:
     1:
       gt0023|Total score: 24
-      gt0028|Diagnosis: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
+      gt0028|Interpretation: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
 - id: score 21
   input:
     1:
@@ -206,13 +203,12 @@ test_cases:
       gt0017|Ask patient to name maximum number of words in 1 minute that begin with the letter F: 1|local::at0059|Named ≥11 words|
       gt0018|Ask patient similarity between train and bicycle (e.g. both are modes of transportation): 1|local::at0063|Answered correctly|
       gt0019|Ask patient similarity between watch and ruler (e.g. both are measuring tools): 1|local::at0066|Answered correctly|
-      ? gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red)
-      : 1|local::at0070|Recalled 1 words|
+      gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red): 1|local::at0070|Recalled 1 words|
       gt0021|Ask patient the date, month, year, day, place, and city: 2|local::at0079|2 correct|
   expected_output:
     1:
       gt0023|Total score: 21
-      gt0028|Diagnosis: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
+      gt0028|Interpretation: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
 - id: score 18
   input:
     1:
@@ -233,10 +229,9 @@ test_cases:
       gt0017|Ask patient to name maximum number of words in 1 minute that begin with the letter F: 1|local::at0059|Named ≥11 words|
       gt0018|Ask patient similarity between train and bicycle (e.g. both are modes of transportation): 1|local::at0063|Answered correctly|
       gt0019|Ask patient similarity between watch and ruler (e.g. both are measuring tools): 1|local::at0066|Answered correctly|
-      ? gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red)
-      : 0|local::at0069|Did not recall any words|
+      gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red): 0|local::at0069|Did not recall any words|
       gt0021|Ask patient the date, month, year, day, place, and city: 1|local::at0078|1 correct|
   expected_output:
     1:
       gt0023|Total score: 18
-      gt0028|Diagnosis: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
+      gt0028|Interpretation: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
