Adjust models based on latest archetype style guide.

--- a/gdl2/UAS_guideline.v1.test.yml
+++ b/gdl2/UAS_guideline.v1.test.yml
@@ -4,8 +4,8 @@ test_cases:
 - id: UAS 4
   input:
     1:
-      gt0004|Wheals: 2|local::at0007|Moderate (20-50 wheals/24 hrs)|
-      gt0005|Pruritus: 2|local::at0012|Moderate (troublesome but does not interfere with normal daily activity or sleep)|
+      gt0004|Wheals: 2|local::at0007|Moderate|
+      gt0005|Pruritus: 2|local::at0012|Moderate|
   expected_output:
     1:
       gt0007|Total score: 4
@@ -20,8 +20,8 @@ test_cases:
 - id: UAS 6
   input:
     1:
-      gt0004|Wheals: 3|local::at0008|Intense (>50 wheals/24 hrs or large confluent areas of wheals)|
-      gt0005|Pruritus: 3|local::at0013|Intense (severe, interferes with normal daily activity or sleep)|
+      gt0004|Wheals: 3|local::at0008|Intense|
+      gt0005|Pruritus: 3|local::at0013|Intense|
   expected_output:
     1:
       gt0007|Total score: 6
