Update gdl2 and test fixture files

--- a/gdl2/SAVE_Score.v1.test.yml
+++ b/gdl2/SAVE_Score.v1.test.yml
@@ -1,134 +1,123 @@
 guidelines:
-  1: SAVE_Score.v1
+  1: SAVE_score.v1
 test_cases:
-- id: 1. Risk Class V
+- id: 1. Risk class I
   input:
     1:
-      gt0003|Age: 65,a
-      gt0005|Weight: 90,kg
-      gt0007|Myocarditis: 0|local::at0006|No|
-      gt0008|Refractory VT/VF: 0|local::at0009|No|
-      gt0009|Post heart or lung transplantation: 0|local::at0012|No|
-      gt0010|Congenital heart disease: -3|local::at0015|Yes|
-      gt0011|Acute renal failure: -3|local::at0019|Yes|
-      gt0012|Chronic renal failure: -6|local::at0022|Yes|
-      gt0013|HCO₃ before ECMO ≤15 mmol/L (91.5 mg/dL) (worst value within 6 hrs before ECMO cannulation): -3|local::at0025|Yes|
-      gt0014|Duration of intubation prior to initiation of ECMO, hrs: -4|local::at0029|>=30|
-      gt0015|Peak inspiratory pressure ≤20 cm H₂O (≤2.0 kPa): 0|local::at0033|No|
-      gt0016|Pre-ECMO cardiac arrest: 0|local::at0038|No|
-      gt0017|Diastolic blood pressure before ECMO ≥40 mmHg (worst value within 6 hrs before ECMO cannulation): 0|local::at0040|No|
-      gt0018|Pulse pressure before ECMO ≤20 mmHg (worst value within 6 hrs before ECMO cannulation): 0|local::at0044|No|
-      gt0019|Liver failure: 0|local::at0049|No|
-      gt0020|CNS dysfunction: 0|local::at0052|No|
+      gt0003|Myocarditis |: 3|local::at0009|Yes|
+      gt0004|Refractory VT/VF|: 2|local::at0012|Yes|
+      gt0005|Post heart or lung transplantation|: 3|local::at0015|Yes|
+      gt0006|Congenital heart disease |: 0|local::at0017|No|
+      gt0007|Age|: 7|local::at0023|18-38|
+      gt0008|Weight|: 2|local::at0027|65–89|
+      gt0009|Pulse pressure pre ECMO ≤20 mmHg|: 0|local::at0030|No|
+      gt0010|Diastolic blood pressure before ECMO ≥40 mmHg|: 3|local::at0034|Yes|
+      gt0011|Pre-ECMO cardiac arrest|: 0|local::at0036|No|
+      gt0012|Peak inspiratory pressure ≤20 cmH2O |: 3|local::at0041|Yes|
+      gt0013|Duration of intubation prior to initiation of ECMO |: 0|local::at0043|≤10|
+      gt0014|Acute renal failure|: 0|local::at0048|No|
+      gt0015|Chronic renal failure|: 0|local::at0063|No|
+      gt0016|HCO3 pre ECMO ≤15 mmol/L|: 0|local::at0052|No|
+      gt0017|Central nervous system dysfunction|: 0|local::at0056|No|
+      gt0018|Liver failure|: 0|local::at0059|No|
   expected_output:
     1:
-      gt0023|Risk class: local::at0012|V|
-      gt0022|SAVE Score: -25,1
-      gt0024|In-hospital survival: local::at0018|18%|
-      gt0026|Age Score: 0|local::at0054|≥63|
-      gt0027|Weight Score: 0|local::at0059|>196 lbs (>89 kg)|
-- id: 2. Risk Class IV
+      gt0020|SAVE score|: 17,1 
+      gt0022|Risk class |: local::at0003|I|
+      gt0023|In-hospital survival|: local::at0009|75%|
+- id: 2. Risk class II
   input:
     1:
-      gt0003|Age: 55,a
-      gt0005|Weight: 65,kg
-      gt0007|Myocarditis: 0|local::at0006|No|
-      gt0008|Refractory VT/VF: 0|local::at0009|No|
-      gt0009|Post heart or lung transplantation: 0|local::at0012|No|
-      gt0010|Congenital heart disease: 0|local::at0016|No|
-      gt0011|Acute renal failure: 0|local::at0020|No|
-      gt0012|Chronic renal failure: 0|local::at0023|No|
-      gt0013|HCO₃ before ECMO ≤15 mmol/L (91.5 mg/dL) (worst value within 6 hrs before ECMO cannulation): 0|local::at0026|No|
-      gt0014|Duration of intubation prior to initiation of ECMO, hrs: -2|local::at0030|11-29|
-      gt0015|Peak inspiratory pressure ≤20 cm H₂O (≤2.0 kPa): 0|local::at0033|No|
-      gt0016|Pre-ECMO cardiac arrest: 0|local::at0038|No|
-      gt0017|Diastolic blood pressure before ECMO ≥40 mmHg (worst value within 6 hrs before ECMO cannulation): 0|local::at0040|No|
-      gt0018|Pulse pressure before ECMO ≤20 mmHg (worst value within 6 hrs before ECMO cannulation): 0|local::at0044|No|
-      gt0019|Liver failure: -3|local::at0048|Yes|
-      gt0020|CNS dysfunction: -3|local::at0051|Yes|
+      gt0003|Myocarditis |: 3|local::at0009|Yes|
+      gt0004|Refractory VT/VF|: 0|local::at0011|No|
+      gt0005|Post heart or lung transplantation|: 0|local::at0014|No|
+      gt0006|Congenital heart disease |: 0|local::at0017|No|
+      gt0007|Age|: 7|local::at0023|18-38|
+      gt0008|Weight|: 1|local::at0026|<65|
+      gt0009|Pulse pressure pre ECMO ≤20 mmHg|: -2|local::at0031|Yes|
+      gt0010|Diastolic blood pressure before ECMO ≥40 mmHg|: 0|local::at0033|No|
+      gt0011|Pre-ECMO cardiac arrest|: 0|local::at0036|No|
+      gt0012|Peak inspiratory pressure ≤20 cmH2O |: 3|local::at0041|Yes|
+      gt0013|Duration of intubation prior to initiation of ECMO |: 0|local::at0043|≤10|
+      gt0014|Acute renal failure|: 0|local::at0048|No|
+      gt0015|Chronic renal failure|: 0|local::at0063|No|
+      gt0016|HCO3 pre ECMO ≤15 mmol/L|: 0|local::at0052|No|
+      gt0017|Central nervous system dysfunction|: 0|local::at0056|No|
+      gt0018|Liver failure|: -3|local::at0060|Yes|
   expected_output:
     1:
-      gt0023|Risk class: local::at0011|IV|
-      gt0022|SAVE Score: -9,1
-      gt0024|In-hospital survival: local::at0017|30%|
-      gt0026|Age Score: 3|local::at0055|53-62|
-      gt0027|Weight Score: 2|local::at0060|143-196 lbs (65-89 kg)|
-- id: 3. Risk Class III
+      gt0020|SAVE score|: 3,1 
+      gt0022|Risk class |: local::at0004|II|
+      gt0023|In-hospital survival|: local::at0010|58%|
+- id: 3. Risk class III
   input:
     1:
-      gt0003|Age: 40,a
-      gt0005|Weight: 55,kg
-      gt0007|Myocarditis: 0|local::at0006|No|
-      gt0008|Refractory VT/VF: 0|local::at0009|No|
-      gt0009|Post heart or lung transplantation: 0|local::at0012|No|
-      gt0010|Congenital heart disease: 0|local::at0016|No|
-      gt0011|Acute renal failure: 0|local::at0020|No|
-      gt0012|Chronic renal failure: 0|local::at0023|No|
-      gt0013|HCO₃ before ECMO ≤15 mmol/L (91.5 mg/dL) (worst value within 6 hrs before ECMO cannulation): 0|local::at0026|No|
-      gt0014|Duration of intubation prior to initiation of ECMO, hrs: 0|local::at0031|<=10|
-      gt0015|Peak inspiratory pressure ≤20 cm H₂O (≤2.0 kPa): 3|local::at0034|Yes|
-      gt0016|Pre-ECMO cardiac arrest: 0|local::at0038|No|
-      gt0017|Diastolic blood pressure before ECMO ≥40 mmHg (worst value within 6 hrs before ECMO cannulation): 0|local::at0040|No|
-      gt0018|Pulse pressure before ECMO ≤20 mmHg (worst value within 6 hrs before ECMO cannulation): -2|local::at0043|Yes|
-      gt0019|Liver failure: -3|local::at0048|Yes|
-      gt0020|CNS dysfunction: 0|local::at0052|No|
+      gt0003|Myocarditis |: 0|local::at0008|No|
+      gt0004|Refractory VT/VF|: 0|local::at0011|No|
+      gt0005|Post heart or lung transplantation|: 0|local::at0014|No|
+      gt0006|Congenital heart disease |: 0|local::at0017|No|
+      gt0007|Age|: 4|local::at0022|39-52|
+      gt0008|Weight|: 1|local::at0026|<65|
+      gt0009|Pulse pressure pre ECMO ≤20 mmHg|: -2|local::at0031|Yes|
+      gt0010|Diastolic blood pressure before ECMO ≥40 mmHg|: 0|local::at0033|No|
+      gt0011|Pre-ECMO cardiac arrest|: 0|local::at0036|No|
+      gt0012|Peak inspiratory pressure ≤20 cmH2O |: 3|local::at0041|Yes|
+      gt0013|Duration of intubation prior to initiation of ECMO |: 0|local::at0043|≤10|
+      gt0014|Acute renal failure|: 0|local::at0048|No|
+      gt0015|Chronic renal failure|: 0|local::at0063|No|
+      gt0016|HCO3 pre ECMO ≤15 mmol/L|: 0|local::at0052|No|
+      gt0017|Central nervous system dysfunction|: 0|local::at0056|No|
+      gt0018|Liver failure|: -3|local::at0060|Yes|
   expected_output:
     1:
-      gt0023|Risk class: local::at0010|III|
-      gt0022|SAVE Score: -3,1
-      gt0024|In-hospital survival: local::at0016|42%|
-      gt0026|Age Score: 4|local::at0056|39-52|
-      gt0027|Weight Score: 1|local::at0061|<143 lbs (<65 kg)|
-- id: 4. Risk Class II
+      gt0020|SAVE score|: -3,1 
+      gt0022|Risk class |: local::at0005|III|
+      gt0023|In-hospital survival|: local::at0011|42%|
+- id: 4. Risk class IV
   input:
     1:
-      gt0003|Age: 36,a
-      gt0005|Weight: 55,kg
-      gt0007|Myocarditis: 3|local::at0007|Yes|
-      gt0008|Refractory VT/VF: 0|local::at0009|No|
-      gt0009|Post heart or lung transplantation: 0|local::at0012|No|
-      gt0010|Congenital heart disease: 0|local::at0016|No|
-      gt0011|Acute renal failure: 0|local::at0020|No|
-      gt0012|Chronic renal failure: 0|local::at0023|No|
-      gt0013|HCO₃ before ECMO ≤15 mmol/L (91.5 mg/dL) (worst value within 6 hrs before ECMO cannulation): 0|local::at0026|No|
-      gt0014|Duration of intubation prior to initiation of ECMO, hrs: 0|local::at0031|<=10|
-      gt0015|Peak inspiratory pressure ≤20 cm H₂O (≤2.0 kPa): 3|local::at0034|Yes|
-      gt0016|Pre-ECMO cardiac arrest: 0|local::at0038|No|
-      gt0017|Diastolic blood pressure before ECMO ≥40 mmHg (worst value within 6 hrs before ECMO cannulation): 0|local::at0040|No|
-      gt0018|Pulse pressure before ECMO ≤20 mmHg (worst value within 6 hrs before ECMO cannulation): -2|local::at0043|Yes|
-      gt0019|Liver failure: -3|local::at0048|Yes|
-      gt0020|CNS dysfunction: 0|local::at0052|No|
+      gt0003|Myocarditis |: 0|local::at0008|No|
+      gt0004|Refractory VT/VF|: 0|local::at0011|No|
+      gt0005|Post heart or lung transplantation|: 0|local::at0014|No|
+      gt0006|Congenital heart disease |: 0|local::at0017|No|
+      gt0007|Age|: 3|local::at0021|53–62|
+      gt0008|Weight|: 2|local::at0027|65–89|
+      gt0009|Pulse pressure pre ECMO ≤20 mmHg|: 0|local::at0030|No|
+      gt0010|Diastolic blood pressure before ECMO ≥40 mmHg|: 0|local::at0033|No|
+      gt0011|Pre-ECMO cardiac arrest|: 0|local::at0036|No|
+      gt0012|Peak inspiratory pressure ≤20 cmH2O |: 0|local::at0040|No|
+      gt0013|Duration of intubation prior to initiation of ECMO |: -2|local::at0044|11-29|
+      gt0014|Acute renal failure|: 0|local::at0048|No|
+      gt0015|Chronic renal failure|: 0|local::at0063|No|
+      gt0016|HCO3 pre ECMO ≤15 mmol/L|: 0|local::at0052|No|
+      gt0017|Central nervous system dysfunction|: -3|local::at0057|Yes|
+      gt0018|Liver failure|: -3|local::at0060|Yes|
   expected_output:
     1:
-      gt0023|Risk class: local::at0009|II|
-      gt0022|SAVE Score: 3,1
-      gt0024|In-hospital survival: local::at0015|58%|
-      gt0026|Age Score: 7|local::at0057|18-38|
-      gt0027|Weight Score: 1|local::at0061|<143 lbs (<65 kg)|
-- id: 5. Risk Class I
+      gt0020|SAVE score|: -9,1 
+      gt0022|Risk class |: local::at0006|IV|
+      gt0023|In-hospital survival|: local::at0012|30%|
+- id: 5. Risk class V
   input:
     1:
-      gt0003|Age: 36,a
-      gt0005|Weight: 67,kg
-      gt0007|Myocarditis: 3|local::at0007|Yes|
-      gt0008|Refractory VT/VF: 2|local::at0010|yes|
-      gt0009|Post heart or lung transplantation: 3|local::at0013|Yes|
-      gt0010|Congenital heart disease: 0|local::at0016|No|
-      gt0011|Acute renal failure: 0|local::at0020|No|
-      gt0012|Chronic renal failure: 0|local::at0023|No|
-      gt0013|HCO₃ before ECMO ≤15 mmol/L (91.5 mg/dL) (worst value within 6 hrs before ECMO cannulation): 0|local::at0026|No|
-      gt0014|Duration of intubation prior to initiation of ECMO, hrs: 0|local::at0031|<=10|
-      gt0015|Peak inspiratory pressure ≤20 cm H₂O (≤2.0 kPa): 3|local::at0034|Yes|
-      gt0016|Pre-ECMO cardiac arrest: 0|local::at0038|No|
-      gt0017|Diastolic blood pressure before ECMO ≥40 mmHg (worst value within 6 hrs before ECMO cannulation): 3|local::at0041|Yes|
-      gt0018|Pulse pressure before ECMO ≤20 mmHg (worst value within 6 hrs before ECMO cannulation): 0|local::at0044|No|
-      gt0019|Liver failure: 0|local::at0049|No|
-      gt0020|CNS dysfunction: 0|local::at0052|No|
+      gt0003|Myocarditis |: 0|local::at0008|No|
+      gt0004|Refractory VT/VF|: 0|local::at0011|No|
+      gt0005|Post heart or lung transplantation|: 0|local::at0014|No|
+      gt0006|Congenital heart disease |: -3|local::at0018|Yes|
+      gt0007|Age|: 0|local::at0020|≥63|
+      gt0008|Weight|: 0|local::at0025|≥90|
+      gt0009|Pulse pressure pre ECMO ≤20 mmHg|: 0|local::at0030|No|
+      gt0010|Diastolic blood pressure before ECMO ≥40 mmHg|: 0|local::at0033|No|
+      gt0011|Pre-ECMO cardiac arrest|: 0|local::at0036|No|
+      gt0012|Peak inspiratory pressure ≤20 cmH2O |: 0|local::at0040|No|
+      gt0013|Duration of intubation prior to initiation of ECMO |: -4|local::at0045|>=30|
+      gt0014|Acute renal failure|: -3|local::at0049|Yes|
+      gt0015|Chronic renal failure|: -6|local::at0064|Yes|
+      gt0016|HCO3 pre ECMO ≤15 mmol/L|: -3|local::at0053|Yes|
+      gt0017|Central nervous system dysfunction|: 0|local::at0056|No|
+      gt0018|Liver failure|: 0|local::at0059|No|
   expected_output:
     1:
-      gt0023|Risk class: local::at0008|I|
-      gt0022|SAVE Score: 17,1
-      gt0024|In-hospital survival: local::at0014|75%|
-      gt0026|Age Score: 7|local::at0057|18-38|
-      gt0027|Weight Score: 2|local::at0060|143-196 lbs (65-89 kg)|
-
+      gt0020|SAVE score|: -25,1 
+      gt0022|Risk class |: local::at0007|V|
+      gt0023|In-hospital survival|: local::at0013|18%|
