Update models based on the latest style guide.

--- a/gdl2/Tokyo_Guidelines_Acute_Cholecystitis_2018_guideline.v1.test.yml
+++ b/gdl2/Tokyo_Guidelines_Acute_Cholecystitis_2018_guideline.v1.test.yml
@@ -5,11 +5,11 @@ test_cases:
   input:
     1:
       gt0043|Murphy's sign: 0|local::at0006|No|
-      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0045|Fever: 1|local::at0015|Yes|
-      gt0046|Elevated CRP: 0|local::at0017|No|
-      gt0047|Elevated WBC count: 0|local::at0020|No|
-      gt0048|Imaging findings characteristic of acute cholecystitis: 0|local::at0025|no|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0006|No|
+      gt0045|Fever: 1|local::at0007|Yes|
+      gt0046|Elevated CRP: 0|local::at0006|No|
+      gt0047|Elevated WBC count: 0|local::at0006|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 0|local::at0006|No|
   expected_output:
     1:
       gt0025|Diagnosis of acute cholecystitis: local::at0005|Entry criteria not met for acute cholecystitis diagnosis|
@@ -17,11 +17,11 @@ test_cases:
   input:
     1:
       gt0043|Murphy's sign: 0|local::at0006|No|
-      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0045|Fever: 0|local::at0014|No|
-      gt0046|Elevated CRP: 0|local::at0017|No|
-      gt0047|Elevated WBC count: 0|local::at0020|No|
-      gt0048|Imaging findings characteristic of acute cholecystitis: 0|local::at0025|no|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0006|No|
+      gt0045|Fever: 0|local::at0006|No|
+      gt0046|Elevated CRP: 0|local::at0006|No|
+      gt0047|Elevated WBC count: 0|local::at0006|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 0|local::at0006|No|
   expected_output:
     1:
       gt0025|Diagnosis of acute cholecystitis: local::at0005|Entry criteria not met for acute cholecystitis diagnosis|
@@ -29,11 +29,11 @@ test_cases:
   input:
     1:
       gt0043|Murphy's sign: 1|local::at0007|Yes|
-      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0045|Fever: 1|local::at0015|Yes|
-      gt0046|Elevated CRP: 0|local::at0017|No|
-      gt0047|Elevated WBC count: 0|local::at0020|No|
-      gt0048|Imaging findings characteristic of acute cholecystitis: 0|local::at0025|no|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0006|No|
+      gt0045|Fever: 1|local::at0007|Yes|
+      gt0046|Elevated CRP: 0|local::at0006|No|
+      gt0047|Elevated WBC count: 0|local::at0006|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 0|local::at0006|No|
   expected_output:
     1:
       gt0025|Diagnosis of acute cholecystitis: local::at0004|Suspected|
@@ -41,11 +41,11 @@ test_cases:
   input:
     1:
       gt0043|Murphy's sign: 1|local::at0007|Yes|
-      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0045|Fever: 0|local::at0014|No|
-      gt0046|Elevated CRP: 0|local::at0017|No|
-      gt0047|Elevated WBC count: 0|local::at0020|No|
-      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0006|No|
+      gt0045|Fever: 0|local::at0006|No|
+      gt0046|Elevated CRP: 0|local::at0006|No|
+      gt0047|Elevated WBC count: 0|local::at0006|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0007|Yes|
   expected_output:
     1:
       gt0025|Diagnosis of acute cholecystitis: local::at0004|Suspected|
@@ -53,11 +53,11 @@ test_cases:
   input:
     1:
       gt0043|Murphy's sign: 1|local::at0007|Yes|
-      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0045|Fever: 1|local::at0015|Yes|
-      gt0046|Elevated CRP: 0|local::at0017|No|
-      gt0047|Elevated WBC count: 0|local::at0020|No|
-      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0006|No|
+      gt0045|Fever: 1|local::at0007|Yes|
+      gt0046|Elevated CRP: 0|local::at0006|No|
+      gt0047|Elevated WBC count: 0|local::at0006|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0007|Yes|
   expected_output:
     1:
       gt0025|Diagnosis of acute cholecystitis: local::at0003|Definite|
@@ -65,21 +65,21 @@ test_cases:
   input:
     1:
       gt0043|Murphy's sign: 1|local::at0007|Yes|
-      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0045|Fever: 1|local::at0015|Yes|
-      gt0046|Elevated CRP: 0|local::at0017|No|
-      gt0047|Elevated WBC count: 0|local::at0020|No|
-      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
-      gt0049|Cardiovascular dysfunction: 0|local::at0029|No|
-      gt0050|Neurological dysfunction: 0|local::at0032|No|
-      gt0051|Respiratory dysfunction: 0|local::at0035|No|
-      gt0052|Renal dysfunction: 0|local::at0038|No|
-      gt0053|Hepatic dysfunction: 0|local::at0041|No|
-      gt0054|Hematological dysfunction: 0|local::at0044|No|
-      gt0055|Elevated WBC count: 1|local::at0051|Yes|
-      gt0056|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0053|No|
-      gt0057|Duration of complaints >72 hours: 0|local::at0056|No|
-      gt0058|Marked local inflammation: 0|local::at0060|No|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0006|No|
+      gt0045|Fever: 1|local::at0007|Yes|
+      gt0046|Elevated CRP: 0|local::at0006|No|
+      gt0047|Elevated WBC count: 0|local::at0006|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0007|Yes|
+      gt0049|Cardiovascular dysfunction: 0|local::at0006|No|
+      gt0050|Neurological dysfunction: 0|local::at0006|No|
+      gt0051|Respiratory dysfunction: 0|local::at0006|No|
+      gt0052|Renal dysfunction: 0|local::at0006|No|
+      gt0053|Hepatic dysfunction: 0|local::at0006|No|
+      gt0054|Hematological dysfunction: 0|local::at0006|No|
+      gt0055|Elevated WBC count: 1|local::at0007|Yes|
+      gt0056|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0006|No|
+      gt0057|Duration of complaints >72 hours: 0|local::at0006|No|
+      gt0058|Marked local inflammation: 0|local::at0006|No|
   expected_output:
     1:
       gt0039|Grade: local::at0064|II|
@@ -90,21 +90,21 @@ test_cases:
   input:
     1:
       gt0043|Murphy's sign: 1|local::at0007|Yes|
-      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0045|Fever: 1|local::at0015|Yes|
-      gt0046|Elevated CRP: 0|local::at0017|No|
-      gt0047|Elevated WBC count: 0|local::at0020|No|
-      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
-      gt0049|Cardiovascular dysfunction: 1|local::at0030|Yes|
-      gt0050|Neurological dysfunction: 0|local::at0032|No|
-      gt0051|Respiratory dysfunction: 0|local::at0035|No|
-      gt0052|Renal dysfunction: 0|local::at0038|No|
-      gt0053|Hepatic dysfunction: 0|local::at0041|No|
-      gt0054|Hematological dysfunction: 0|local::at0044|No|
-      gt0055|Elevated WBC count: 1|local::at0051|Yes|
-      gt0056|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0053|No|
-      gt0057|Duration of complaints >72 hours: 0|local::at0056|No|
-      gt0058|Marked local inflammation: 0|local::at0060|No|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0006|No|
+      gt0045|Fever: 1|local::at0007|Yes|
+      gt0046|Elevated CRP: 0|local::at0006|No|
+      gt0047|Elevated WBC count: 0|local::at0006|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0007|Yes|
+      gt0049|Cardiovascular dysfunction: 1|local::at0007|Yes|
+      gt0050|Neurological dysfunction: 0|local::at0006|No|
+      gt0051|Respiratory dysfunction: 0|local::at0006|No|
+      gt0052|Renal dysfunction: 0|local::at0006|No|
+      gt0053|Hepatic dysfunction: 0|local::at0006|No|
+      gt0054|Hematological dysfunction: 0|local::at0006|No|
+      gt0055|Elevated WBC count: 1|local::at0007|Yes|
+      gt0056|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0006|No|
+      gt0057|Duration of complaints >72 hours: 0|local::at0006|No|
+      gt0058|Marked local inflammation: 0|local::at0006|No|
   expected_output:
     1:
       gt0039|Grade: local::at0065|III|
@@ -115,21 +115,21 @@ test_cases:
   input:
     1:
       gt0043|Murphy's sign: 1|local::at0007|Yes|
-      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0045|Fever: 1|local::at0015|Yes|
-      gt0046|Elevated CRP: 0|local::at0017|No|
-      gt0047|Elevated WBC count: 0|local::at0020|No|
-      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
-      gt0049|Cardiovascular dysfunction: 0|local::at0029|No|
-      gt0050|Neurological dysfunction: 0|local::at0032|No|
-      gt0051|Respiratory dysfunction: 0|local::at0035|No|
-      gt0052|Renal dysfunction: 0|local::at0038|No|
-      gt0053|Hepatic dysfunction: 0|local::at0041|No|
-      gt0054|Hematological dysfunction: 0|local::at0044|No|
-      gt0055|Elevated WBC count: 0|local::at0050|No|
-      gt0056|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0053|No|
-      gt0057|Duration of complaints >72 hours: 0|local::at0056|No|
-      gt0058|Marked local inflammation: 0|local::at0060|No|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0006|No|
+      gt0045|Fever: 1|local::at0007|Yes|
+      gt0046|Elevated CRP: 0|local::at0006|No|
+      gt0047|Elevated WBC count: 0|local::at0006|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0007|Yes|
+      gt0049|Cardiovascular dysfunction: 0|local::at0006|No|
+      gt0050|Neurological dysfunction: 0|local::at0006|No|
+      gt0051|Respiratory dysfunction: 0|local::at0006|No|
+      gt0052|Renal dysfunction: 0|local::at0006|No|
+      gt0053|Hepatic dysfunction: 0|local::at0006|No|
+      gt0054|Hematological dysfunction: 0|local::at0006|No|
+      gt0055|Elevated WBC count: 0|local::at0006|No|
+      gt0056|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0006|No|
+      gt0057|Duration of complaints >72 hours: 0|local::at0006|No|
+      gt0058|Marked local inflammation: 0|local::at0006|No|
   expected_output:
     1:
       gt0039|Grade: local::at0063|I|
