Update archetype, gdl2 and test fixture files

--- a/gdl2/Multiple_Myeloma_International_Staging_System.v1.test.yml
+++ b/gdl2/Multiple_Myeloma_International_Staging_System.v1.test.yml
@@ -1,5 +1,5 @@
 guidelines:
-  1: Multiple_Myeloma_ISS.v1
+  1: Multiple_Myeloma_International_Staging_System.v1
 test_cases:
 - id: Test no input
   input:
@@ -13,7 +13,7 @@ test_cases:
   expected_output:
     1:
       gt0006|Interpretation: Stage III
-      gt0017|Comment: Median survival is 29 months
+      gt0017|Median overall survival: 29 months
 - id: Test Stage II
   input:
     1:
@@ -22,7 +22,7 @@ test_cases:
   expected_output:
     1:
       gt0006|Interpretation: Stage II
-      gt0017|Comment: Median survival is 44 months
+      gt0017|Median overall survival: 44 months
 - id: Test Stage I
   input:
     1:
@@ -31,4 +31,4 @@ test_cases:
   expected_output:
     1:
       gt0006|Interpretation: Stage I
-      gt0017|Comment: Median survival is 62 months
+      gt0017|Median overall survival: 62 months
