--- a/gdl2/Sokal_Index_for_CML.v1.test.yml
+++ b/gdl2/Sokal_Index_for_CML.v1.test.yml
@@ -80,13 +80,13 @@ test_cases:
 - id: Test Conversion Factor
   input:
     1:
-      'gt0004|Spleen size ': 5,[in]
+      'gt0004|Spleen size ': 5,in
       gt0007|Platelet count: 150,10*9/l
       gt0025|% myeloblasts: 9,%
       gt0024|Age: 20,a
   expected_output:
     1:
-      gt0013|2-year Survival: local::at0010|65%|
-      gt0011|Risk Group: local::at0006|High|
+      gt0013|2-year Survival: local::at0010|65%| 
+      gt0011|Risk Group: local::at0006|High| 
       gt0014|Median Survival: local::at0014|2.5 years|
       gt0020|Sokal score: 1.5,1
