Remove spaces from id.

--- a/gdl2/AIH_Revised_Original_Score _guideline.v1.test.yml
+++ b/gdl2/AIH_Revised_Original_Score _guideline.v1.test.yml
@@ -1,5 +1,5 @@
 guidelines:
-  1: AIH_Revised_Original Score _guideline.v1
+  1: AIH_Revised_Original_Score_guideline.v1
 test_cases:
 - id: AIH score, no liver changes
   input:
